@@ -1,5 +1,6 @@
 Paradox Driver NEWS - User visible changes.
 
+2020-08-12 Added support to ORDER BY clause. Fix a lot of bugs.
 2020-08-11 Added support for parameters in PreparedStatement. Now is possible
     to cancel a statement. Fixed characters escapes.
 2020-08-09 Added a planner compiler for performance improvement.
